# llm-quality-testing

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
configs/: default_config.yaml
data/: sample_data.json
llm_eval/: evaluation.py
results/: leaderboard.csv  leaderboard.json
scripts/: compare_models.py  evaluate_accuracy.py  evaluate_bleu.py  evaluate_perplexity.py  main.py  utils.py
tests/: test_comparison_workflow.py  test_evaluation.py
